#[[ LCPP_NOTICE_BEGIN
LCPP_NOTICE_END ]]

################################################################
#                           INFO
################################################################
#[[

Apps folder, see ./README.md for info

]]

################################################################
#                    basic configurations
################################################################

################################################################
#                        SUBPROJECTS
################################################################

message("configuring apps folder...")

add_subdirectory("tmp_test")