#[[ LCPP_NOTICE_BEGIN
LCPP_NOTICE_END ]]

################################################################
#                           INFO
################################################################
#[[

Libraries folder, see ./README.md for info

]]

################################################################
#                    basic configurations
################################################################

################################################################
#                        SUBPROJECTS
################################################################

add_subdirectory("lcpp")